--- a/src/app/tailwind.css
+++ b/src/app/tailwind.css
@@ -2,14 +2,14 @@
 
 @utilities {
   .container {
-    margin-inline: auto; // 左右中央寄せ
-    padding-inline: 2rem; // 左右のパディング (2rem = 32px)
-    max-width: 100%; // 最大幅
+    margin-inline: auto; /* 左右中央寄せ */
+    padding-inline: 2rem; /* 左右のパディング (2rem = 32px) */
+    max-width: 100%; /* 最大幅 */
   }
 
   @media (min-width: theme(--breakpoint-2xl)) {
     .container {
-      max-width: 1400px; // 2xlブレークポイントでの最大幅 (1400px)
+      max-width: 1400px; /* 2xlブレークポイントでの最大幅 (1400px) */
     }
   }
 }
