🎨 containerクラスをユーティリティに変更する

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -142,7 +142,7 @@ h6.ce-header {
   @apply text-base font-semibold;
 }
 
-.container {
+@utility container {
   @apply mx-auto px-8;
 
   /* 1400px 未満の場合は 100% */
