--- a/src/styles/mdx.css
+++ b/src/styles/mdx.css
@@ -1,4 +1,4 @@
-@reference "./globals.css";
+@import "./globals.css";
 
 /* コードブロック */
 [data-rehype-pretty-code-figure] code {
@@ -23,22 +23,27 @@
   color: gray;
 }
 
+/* コードブロックの行のハイライト */
 [data-rehype-pretty-code-figure] .line--highlighted {
   @apply bg-slate-300/10;
 }
 
+/* コードブロックの行のハイライトのスパン */
 [data-rehype-pretty-code-figure] .line-highlighted span {
   @apply relative;
 }
 
+/* コードブロックの行のハイライトの単語 */
 [data-rehype-pretty-code-figure] .word--highlighted {
   @apply rounded-md bg-slate-300/10 p-1;
 }
 
+/* コードブロックのタイトル */
 [data-rehype-pretty-code-title] {
   @apply mt-4 py-2 px-4 text-sm font-medium;
 }
 
+/* タイトルがあるコードブロック */
 [data-rehype-pretty-code-title] + pre {
   @apply mt-0;
 }
